Add logo to Hero and Footer components

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
       <meta name="twitter:title" content="Peter Unsworth LLC - Technical Strategy & Consulting | Talent Recruitment" />
       <meta name="twitter:description" content="Expert technical strategy consulting and talent recruitment services. Helping organizations align technical solutions with business objectives." />
       
+      <!-- Favicon -->
+      <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+      
       <!-- Additional SEO -->
       <meta name="theme-color" content="#0f172a" />
       <link rel="canonical" href="https://peter-unsworth.com" />
