Add logo to Hero and Footer components

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       <link rel="icon" type="image/x-icon" href="/favicon.ico" />
       <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
       <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+      <link rel="apple-touch-icon" sizes="180x180" href="/favicon-32x32.png" />
+      <link rel="shortcut icon" href="/favicon.ico" />
+      <link rel="manifest" href="/site.webmanifest" />
       
       <!-- Additional SEO -->
       <meta name="theme-color" content="#0f172a" />
