--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <!-- Additional SEO -->
       <meta name="theme-color" content="#0f172a" />
       <link rel="canonical" href="https://peter-unsworth.com" />
+      <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
     </head>
 
     <body>
