--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
       <meta name="theme-color" content="#0f172a" />
       <link rel="canonical" href="https://peter-unsworth.com" />
       <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+
+      <!-- Google Analytics 4 -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-YM2JM8VZYZ"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        window.gtag = gtag;
+        gtag("js", new Date());
+        gtag("config", "G-YM2JM8VZYZ", { anonymize_ip: true });
+      </script>
     </head>
 
     <body>
