--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Peter Unsworth LLC - Technical Strategy & Consulting | Talent Recruitment</title>
+      <title>Peter Unsworth LLC | Tech Strategy & Talent Partners</title>
       
       <!-- SEO Meta Tags -->
-      <meta name="description" content="Peter Unsworth LLC offers technical strategy consulting, talent recruitment, and digital transformation services. Expert guidance in business requirements analysis, team augmentation, and budget optimization for modern organizations." />
+      <meta name="description" content="Peter Unsworth LLC delivers technical strategy consulting, AI-ready application development, and talent recruitment that align technology with measurable business growth worldwide." />
       <meta name="keywords" content="technical strategy, consulting, talent recruitment, digital transformation, team augmentation, business requirements, Peter Unsworth, Front Edge Digital, Dev's For Code" />
       <meta name="author" content="Peter Unsworth LLC" />
       <meta name="robots" content="index, follow" />
